--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -487,9 +487,9 @@ The proportion of $Q$-associated variants per chromosome.
 \textbf{B}
 Mutation spectrum enrichment of  $Q$-associated variants across each chromosome.
 Chromosome 1 has a strong enrichment in *AC${\rightarrow}$*CC mutational pattern.
-\textbf{C} The number of $Q$-associated variants per 10kb window across the genome.
+\textbf{C} The number of $Q$-associated variants per 1Mb window across the genome.
 Grey bars indicate regions within and black bars indicate regions outside the 1000 Genomes Project strict mask.
-%One region not flagged by the 1000 Genomes Project strict mask in chromosome 17 has more than 10 variants per window.
+Three regions not flagged by the 1000 Genomes Project strict mask in chromosomes 1, 2 and 17 have more than 30 variants per window.
 \textbf{D} Distribution of variant counts per 1Mb window. Where variants that fail the strict mask are in grey and those that pass are in black. 
 }  
 \label{CountPerChrom}
